fix(styles): inline code spacing and line heights

--- a/css/codes.css
+++ b/css/codes.css
@@ -5,9 +5,10 @@ a > code {
 p > code,
 li > code {
   font-weight: bold;
+  font-size: 1rem;
   background: #f5f2f0;
-  padding: 0.125rem 0.25rem;
-  border-radius: 0.3em;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.5em;
   color: #000;
   border: 1px solid silver;
 }
@@ -20,6 +21,6 @@ code {
 :not(pre)>code[class*=language-],
 pre[class*=language-] {
   margin: 1rem 0 !important;
-  border-radius: 0.3em;
+  border-radius: 0.5em;
   border: 1px solid silver;
 }
