--- a/css/typography.css
+++ b/css/typography.css
@@ -15,7 +15,20 @@ li {
   text-decoration: none;
   font-weight: 400;
   font-family: "Montserrat", "Arial", sans-serif;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+a {
   line-height: 1.5;
+}
+
+li {
+  line-height: 1.75;
 }
 
 h1,
